# Pallas-Bot

./: .env  .env.dev  .env.prod  .gitconfig  .gitignore  .gitmodules  AI.Dockerfile  CPU.Dockerfile  DeploymentTutorial.md  Dockerfile  GPU.Dockerfile  README.md  bot.py  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: CodeQualityChecks.yml  build.yml  ci.yml
bot/plugins/: pixivel.py  sese.py  test.py
bot/plugins/anti-pixiv/: README.md  __init__.py
bot/plugins/anti-setu/: README.md  __init__.py  config.py
bot/plugins/catcat/: README.md
bot/plugins/drift/: __init__.py
bot/plugins/greeting/: README.md  __init__.py  config.py  wiki.py
bot/plugins/help/: __init__.py
bot/plugins/music/: __init__.py
bot/plugins/nlp/: __init__.py  config.py
bot/plugins/pixiv/: __init__.py  keeper.py  pixiv.py
bot/plugins/push/: README.md  __init__.py  bili_api.py  config.py  github.py  weibo.py
bot/plugins/recruit/: __init__.py  calc.py  config.py  image_creator.py  ocr.py
bot/plugins/repeater/: README.md  __init__.py  active.py  clear.py  database.py  model.py
bot/plugins/request/: __init__.py
bot/plugins/text-analyse/: README.md  __init__.py  config.py
bot/util/: mole.py
bot/util/pixiv/: keeper.py
configs/: config.py
docs/: AIDeployment.md  Deployment.md  DockerDeployment.md
resource/chat/models/: path_structure  path_structure.txt
resource/music/: 帕拉斯 - 富士山下_5key.aac
resource/sing/models/: path_structure  path_structure.txt  put_model_files_here
resource/tts/models/: path_structure.txt
resource/voices/: path_structure.txt
rpc_server/: pymongo_rpc_pb2.py  pymongo_rpc_pb2_grpc.py  server.py
src/backup/anti-setu/: __init__.py
src/backup/drift/: database.py
src/backup/help/: __init__.py
src/backup/recruit/: data.py  image_creator.py
src/backup/text-analyse/: config.py
src/common/config/: __init__.py  (+1 more)
tests/rpc/: test.py
tools/: backup.sh  clear_accounts.py  clear_old_image.py  config.mongodb  message.py  mix_data.sh  mk_cache.sh  nltk_download.py
tools/db_migration/: amiya_db.py  amiya_migration.py  database.py  generate_blacklist.py  pallas_db.py  pallas_mongo.py  sqlite_to_mongo.py
tools/pixiv/: history.py  keeper.py  pixiv.py  pixivel.py
(+65 files in other folders)
