[tool.poetry]
name = "Pallas-Bot"
version = "0.1.0"
description = "Pallas-Bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
nonebot-adapter-onebot = "^2.2.3"
requests = "^2.31.0"
requests-html = "^0.10.0"
pydantic = "^1.10.4"
pymongo = "^4.3.3"
jieba-fast = "^0.53"
pypinyin = "^0.49.0"
asyncer = "^0.0.2"
nonebot-plugin-apscheduler = "^0.3.0"
setuptools = "^74.1.2"

[tool.poetry.dev-dependencies]
nb-cli = "^1.2.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
